--- a/Online Shop/MojProfil.html
+++ b/Online Shop/MojProfil.html
@@ -1,182 +1,22 @@
 ﻿<!DOCTYPE html>
-<html data-bs-theme="light">
+<html data-bs-theme="light" lang="sr">
 <head>
+    <title>Moj Profil - Shopy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Moj Profil - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <link href="Content/shopy.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.7.0.min.js"></script>
+    <script src="Scripts/load-optimizer.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
     <script src="Scripts/modernizr-2.8.3.js"></script>
-    <style>
-        .navbar .login-btn {
-            position: absolute;
-            top: 7px;
-            right: 95px;
-        }
-
-        .navbar .profil-btn {
-            position: absolute;
-            top: 10px;
-            right: 35px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .login-btn {
-                right: 75px;
-            }
-        }
-
-        .navbar .register-btn {
-            position: absolute;
-            top: 7px;
-            right: 15px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .register-btn {
-                right: 175px;
-            }
-        }
-    </style>
-    <script>
-        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
-        $.ajax({
-            url: "/api/auth/Ulogovan",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                if (response != null) {
-                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
-                    {
-                        window.location.href = "Index.html";
-                    }
-                }
-            }
-        });
-
-        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
-        $.ajax({
-            url: "/api/auth/AuthKorisnik",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-                if (data.KorisnickoIme !== "") {
-                    // prikazi podatke i promeni meni
-                    // sakri dugmice za login i register
-                    $(function () {
-                        $("#pl").remove();
-
-                        // prikazi meni za nalog
-                        $('#poruka').text("Dobrodošli nazad, " + data.KorisnickoIme);
-
-                        // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
-                        var uloga = data.Uloga;
-
-                        if (uloga === 0) {
-                            // u pitanju je kupac
-                            $("#prodavacmeni").remove();
-                            $("#adminmeni").remove();
-                            $("#uloga").text("Kupac");
-                        }
-                        else if (uloga === 1) {
-                            // u pitanju je prodavac
-                            $("#kupacmeni").remove();
-                            $("#adminmeni").remove();
-                            $("#uloga").text("Prodavac");
-                        }
-                        else if (uloga === 2) {
-                            // u pitanju je administrator
-                            $("#prodavacmeni").remove();
-                            $("#kupacmeni").remove();
-                            $("#uloga").text("Administrator");
-                        }
-
-                        $("body").removeClass("d-none");
-
-                        return false;
-                    });
-                }
-                else {
-                    $(function () {
-                        // korisnik nije ulogovan - prikazi login i register
-                        $("#pl").show();
-
-                        // sakri meni za nalog
-                        $('#profil').addClass('d-none');
-                    });
-                }
-            }
-        });
-
-        // Odjava korisnika
-        jQuery(function () {
-            $("#odjava").on('click', function () {
-                // ajax poziv ka api-ju za vrsenje registracije
-                $.ajax({
-                    url: "/api/auth/Odjava",
-                    type: "POST",
-                    data: {},
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        if (response != null) {
-                            if (JSON.parse(response).Kod === 0) // korisnik se odjavio uspesno
-                            {
-                                window.location.href = "Index.html";
-                                return false;
-                            }
-                        }
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="Scripts/api/auth/auth-base.js"></script>
+    <script src="Scripts/api/users/my-profile.js"></script>
+    <script src="Scripts/loader-finisher.js"></script>
 </head>
-<body class="d-none">
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            <a href="/" class="navbar-brand">Shopy</a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li><a href="/" class="nav-link">Početna stranica</a></li>
-                    <li id="pl">
-                        <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
-                        <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
-                    </li>
-                    <li id="profil">
-                        <div class="btn-group profil-btn">
-                            <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span id="poruka"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
-                                <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body class="d-none bsp">
+    <div id="nm"></div>
     <div class="container body-content mt-4 mb-5">
         <main>
             <div class="container">
@@ -187,7 +27,7 @@
                                 <div class="card" style="border-radius: 1rem;">
                                     <div class="row g-0">
                                         <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                            <img src="Images/mainpf.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                            <img src="Images/pastel-profile.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
                                         </div>
                                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                             <div class="card-body p-4 p-lg-5 text-black">
@@ -196,34 +36,37 @@
                                                         <span class="h1 fw-bold mb-0">Shopy <span id="uloga"></span></span>
                                                     </div>
                                                     <h5 class="fw-normal mb-5 pb-2" style="letter-spacing: 1px;">Detalji i opcije Vašeg naloga</h5>
-                                                    <div class="pt-1 mb-4">
-                                                        <a href="IzmenaProfila.html" class="btn btn-dark btn-lg btn-block" id="izmenaprofila" type="button">Izmena profila</a>
-                                                    </div>
-                                                    <div id="kupacmeni">
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="MojePorudzbine.html" class="btn btn-dark btn-lg btn-block" id="mojeporudzbine" type="button">Moje porudžbine</a>
+                                                    <div id="kupacmeni" class="row row-cols-3">
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="IzmenaProfila.html" class="btn btn-outline-dark btn-lg btn-block fw-bold" id="izmenaprofila" type="button">Izmena Profila</a>
                                                         </div>
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="OmiljeniProizvodi.html" class="btn btn-dark btn-lg btn-block" id="omiljeniproizvodi" type="button">Omiljeni proizvodi</a>
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="MojePorudzbine.html" class="btn btn-outline-primary btn-lg btn-block fw-bold" id="mojeporudzbine" type="button">Moje Porudžbine</a>
                                                         </div>
-                                                    </div>
-                                                    <div id="prodavacmeni">
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="MojiProizvodi.html" class="btn btn-dark btn-lg btn-block" id="mojiproizvodi" type="button">Moji proizvodi</a>
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="OmiljeniProizvodi.html" class="btn btn-outline-success btn-lg btn-block fw-bold" id="omiljeniproizvodi" type="button">Omiljeni Proizvodi</a>
                                                         </div>
                                                     </div>
-                                                    <div id="adminmeni">
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="ListaKorisnika.html" class="btn btn-dark btn-lg btn-block" id="listakorisnika" type="button">Lista korisnika</a>
+                                                    <div id="prodavacmeni" class="row row-cols-3">
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="IzmenaProfila.html" class="btn btn-outline-dark btn-lg btn-block fw-bold" id="izmenaprofila" type="button">Izmena Profila</a>
                                                         </div>
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="ListaProizvoda.html" class="btn btn-dark btn-lg btn-block" id="listaproizvoda" type="button">Lista proizvoda</a>
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="MojiProizvodi.html" class="btn btn-outline-primary btn-lg btn-block fw-bold" id="mojiproizvodi" type="button">Moji Proizvodi</a>
                                                         </div>
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="ListaPorudzbina.html" class="btn btn-dark btn-lg btn-block" id="listaporudzbina" type="button">Lista porudžbina</a>
+                                                    </div>
+                                                    <div id="adminmeni" class="row row-cols-4">
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="IzmenaProfila.html" class="btn btn-outline-dark btn-lg btn-block fw-bold" id="izmenaprofila" type="button">Izmena Profila</a>
                                                         </div>
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="ListaRecenzija.html" class="btn btn-dark btn-lg btn-block" id="listarecenzija" type="button">Lista recenzija</a>
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="ListaKorisnika.html" class="btn btn-outline-primary btn-lg btn-block fw-bold" id="listakorisnika" type="button">Shopy Korisnici</a>
+                                                        </div>
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="ListaProizvoda.html" class="btn btn-outline-success btn-lg btn-block fw-bold" id="listaproizvoda" type="button">Shopy Proizvodi</a>
+                                                        </div>
+                                                        <div class="pt-1 mb-4 col">
+                                                            <a href="ListaPorudzbina.html" class="btn btn-outline-danger btn-lg btn-block fw-bold" id="listaporudzbina" type="button">Shopy Porudžbine</a>
                                                         </div>
                                                     </div>
                                                 </form>
